# wisski2rdfproxy

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  wisski2rdfproxy.py
.github/workflows/: mkdocs.yml  tests.yml
examples/: releven_assertions_20240821.json
examples/output/: .gitignore  rdfproxy  releven.py  releven__person_stub.py  releven__person_stub.rq  releven_boulloterion.py  releven_boulloterion.rq  releven_external_authority.py  releven_external_authority.rq  releven_person.py  releven_person.rq  releven_person_stub.py  releven_person_stub.rq  releven_publication.py  releven_publication.rq
src/wisskas/: __init__.py  filter.py  main.py  model.py  serialize.py  string_utils.py  wisski.py
src/wisskas/cli/: endpoints.py  main.py  paths.py
src/wisskas/templates/: entrypoint.jinja  entrypoint.jinja2  entrypoint.py.jinja  model.jinja  model.jinja2  model.py.jinja  pathinfo.jinja2  query.jinja  query.jinja2  query.rq.jinja
src/wisskas/templates/pydantic/: BaseModel.jinja2
tests/: test_succeed.py
tests/data/: releven_assertions_20240821.xml
tests/wisski/: test_cli.py  test_parsing.py
