[project]
name = "wisskas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Stadler", email = "kevin.stadler@oeaw.ac.at" }
]
requires-python = ">=3.11"
dependencies = [
    "datamodel-code-generator>=0.26.5",
    "jinja2>=3.1.5",
    "rdfproxy",
]

[project.scripts]
wisskas = "wisskas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rdfproxy = { git = "https://github.com/acdh-oeaw/rdfproxy.git" }
