[project]
name = "wisskas"
version = "0.1.0"
description = "WissKI path adapter serialization"
readme = "README.md"
authors = [
    { name = "Kevin Stadler", email = "kevin.stadler@oeaw.ac.at" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "lxml>=5.3.0",
    "rdfproxy",
    "rich>=13.9.4",
    "rich-argparse>=1.6.0",
]

[project.scripts]
wisskas = "wisskas.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rdfproxy = { git = "https://github.com/acdh-oeaw/rdfproxy", branch = "prototype/ordering" }

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "mkdocs-material>=9.6.2",
    "pytest>=8.3.4",
]
examples = [
    "fastapi[standard]>=0.115.8",
    "gitpython>=3.1.44",
]
